# code-quality-inspector

./: .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
code_quality_inspector/: code_quality_inspector.py
